--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -20,6 +20,11 @@
     <p id="message-1"></p>
     <p id="message-2"></p>
 
+    <p id="message-3"></p>
+    <p id="message-4"></p>
+
+    
+
 
     <script src="/js/app.js"></script>
 </body>
